# core

./: Cargo.toml  local_path_analysis_report.md
crates/meroctl/: Cargo.toml
crates/meroctl/src/cli/: context.rs
crates/meroctl/src/cli/context/: watch_sse.rs
crates/node/primitives/src/client/: application.rs
crates/server/: Cargo.toml
crates/server/src/: config.rs  jsonrpc.rs  lib.rs  sse.rs
crates/url-research/: Cargo.toml
crates/url-research/src/: application_source_research.rs  lib.rs  url_analysis.rs
demos/guess-number-module/: API_REFERENCE.md  DEPLOYMENT_GUIDE.md  INTEGRATION_GUIDE.md  QUICK_START.md  README.md  todo.md
demos/guess-number-module/off-chain-game/: Cargo.toml  README.md
demos/guess-number-module/off-chain-game/src/: calimero.rs  error.rs  game.rs  lib.rs  main.rs  server.rs  storage.rs
demos/guess-number-module/off-chain-game/static/: index.html
demos/guess-number-module/on-chain-contract/: Cargo.toml  README.md  deploy.sh
demos/guess-number-module/on-chain-contract/scripts/: test_contract.sh
demos/guess-number-module/on-chain-contract/src/: lib.rs
demos/sse-demo/: Cargo.toml  README.md  sse-note.md
demos/sse-demo/src/: client.rs  main.rs
demos/sse-demo/static/: index.html
doc/: issues_note_1433.md
