[package]
name = "url-research"
version = "0.1.0"
edition = "2021"
description = "Research module for understanding URL behavior in ApplicationSource context"

[dependencies]
url = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
eyre = { workspace = true }
camino = { workspace = true }

[[bin]]
name = "url_behavior_test"
path = "src/bin/url_behavior_test.rs"

[[bin]]  
name = "application_source_test"
path = "src/bin/application_source_test.rs"

[[bin]]
name = "four_solutions_demo"
path = "src/bin/four_solutions_demo.rs"

[[bin]]
name = "path_management_demo"
path = "src/bin/path_management_demo.rs"
