[package]
name = "guess-number-contract"
version = "0.1.0"
authors = ["Calimero Limited <info@calimero.network>"]
edition = "2021"
description = "NEAR smart contract for storing guessing number game results"
license = "MIT OR Apache-2.0"
repository = "https://github.com/calimero-network/core"

[lib]
crate-type = ["cdylib"]

[dependencies]
# NEAR SDK for smart contract development
near-sdk = "5.5.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
# Testing utilities
near-sdk = { version = "5.5.0", features = ["unit-testing"] }
tokio = { version = "1.0", features = ["macros"] }

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
# Opt into extra safety checks on arithmetic operations https://stackoverflow.com/a/64136471/249801
overflow-checks = true

[features]
default = []

# Features for different contract capabilities
storage-management = []
analytics = []
admin-features = []
